fix: cursror and link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="glass-panel">
                 <h2 class="cyan">// 03_SIGNAL_UPLINK</h2>
                 <p>Initiate a direct connection for collaborative ventures or technical inquiries.</p>
-                <a href="mailto:hello@abrar.ali" class="email-link">abrar.ali@system.com</a>
+                <a href="mailto:mohammedabrarali001@gmail.com" class="email-link">mohammedabrarali001@gmail.com</a>
             </div>
         </section>
     </main>
